<resources>
    <string name="app_name">GetTasksDone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fab_description">Añadir nueva tarea</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_inBox">In Box</string>
    <string name="menu_proyectos">In Box</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="descripcion_boton_engranaje">Botón de engranaje</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="departamento">Departamento</string>
    <string name="completar_registro">Completar registro</string>
    <string name="por_favor_completa_tu_registro_introduciendo_los_siguientes_datos">Por favor completa tu registro introduciendo los siguientes datos</string>
    <string name="nombre">Nombre</string>
    <string name="puesto">Puesto</string>
    <string name="telefono">Telefono</string>
    <string name="completar">Completar</string>
    <string name="ejemploNombre">Pedro</string>
    <string name="ejemploTelefono">123456789</string>
    <string name="ejemploDepartamento">Recursos Humanos</string>
    <string name="ejemploPuesto">Recruiter</string>
    <string name="btnCrear">Crear</string>
    <string name="hintDescripcion">Descripción del proyecto</string>
    <string name="ejemploFechaFin">Fecha de finalización</string>
    <string name="pistaFechaInicio">Fecha de inicio</string>
    <string name="pistaNombreProyecto">Nombre del proyecto</string>
    <string name="textoCrearProyecto">Crear Proyecto</string>
    <string name="textoEstado">Estado</string>
    <string name="textIniciaSesion">Inicia Sesión</string>
    <string name="textoInicioSesion">Inicio de sesión</string>
    <string name="descripcionLogin">Inicia sesión con tu cuenta de</string>
    <string name="get_tasks_done">Get Tasks Done</string>
    <string name="pistaUsername">Nombre de Usuario</string>
    <string name="textoUsername">Nombre de Usuario</string>
    <string name="textoPassword">Contraseña</string>
    <string name="textoRegister1">¿Todavía no tienes cuenta?</string>
    <string name="textoBotonRegistro">Registrate</string>
    <string name="pistaContraseña">Introduce tu contraseña</string>
    <string name="joinButtonDesc">Botón de entrar</string>
    <string name="appTitle">Get Tasks Done</string>
    <string name="introductionText">Lleva tu organización al siguiente nivel</string>
    <string name="textRegistro">Registro</string>
    <string name="descRegistro">Date de alta rellenando los siguientes datos:</string>
    <string name="textNombreUsuario">Nombre de usuario</string>
    <string name="textoEmail">Email</string>
    <string name="btnCrearCuenta">Crear Cuenta</string>
    <string name="textCuentaExistente">¿Ya tienes una cuenta?</string>
    <string name="btnTextLogin">Inicia Sesión</string>
    <string name="navAD">Algún Día</string>
    <string name="navAgendado">Agendado</string>
    <string name="navEspera">Esperando</string>
    <string name="navInbox">Bandeja de entrada</string>
    <string name="navCierre">Cerrar sesión</string>
    <string name="navProyectos">Proyectos</string>
    <string name="pistaEmail">tucorreo@email.com</string>
    <string name="btnCreate">Crear</string>
    <string name="btnOtroContexto">Otro contexto</string>
    <string name="btnNuevoEstado">Nuevo estado</string>
    <string name="prioridadImgDesc">prioridad</string>
    <string name="pistaFechaTarea">Selecciona una fecha</string>
    <string name="pistaTituloTarea">Título</string>
    <string name="textEstadoTarea">Estado</string>
    <string name="textContextoTarea">Contexto</string>
    <string name="textProyectoTarea">Proyecto</string>
    <string name="btnNuevoProyectoTarea">Nuevo proyecto</string>
    <string name="textCrearTarea">Crear Tarea</string>
    <string name="pistaDescTarea">Descripción</string>
    <string name="descripcion_boton_de_acceso">Boton de acceso a la aplicación</string>
    <string name="pistaNuevaURL">https://miURL.com</string>
    <string name="textoServidor">Servidor</string>
</resources>