<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/navInbox" />
        <item
            android:id="@+id/nav_proyectos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navProyectos" />
        <item
            android:id="@+id/nav_esperando"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navEspera" />
        <item
            android:id="@+id/nav_agendado"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navAgendado" />
        <item
            android:id="@+id/nav_ad"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navAD" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
    <!-- Nuevo grupo para el ítem de menú de cierre de sesión -->
    <group android:checkableBehavior="none">
        <item android:id="@+id/menu_space"
            android:checkable="false"
            android:enabled="false"
            android:visible="true"
            android:icon="@android:color/transparent"
            android:title=""/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/navCierre" />
    </group>
</menu>